# DHL-MM

./: .gitignore  APPLICATIONS_ROADMAP.md  NUMERICAL_PRECISION.md  README.md  SOCIAL_MEDIA_PAPER.txt  dhl_mm_v2.py  e8_full_algebra.py  e8_structure_constants.py  pyproject.toml  setup.py  test_full_algebra.py  test_structure.py
.github/workflows/: ci.yml  wheels.yml
benchmarks/: sparse_kernel_bench.py
dhl_mm/: __init__.py  casimir.py  csparse.py  defect.py  e8.py  engine.py  exceptional_engine.py  integrators.py  jax_backend.py  lattice.py  pyg.py  quantum.py  roots.py  structure.py  zphi.py
dhl_mm/csrc/: sparse_bracket.cpp
dhl_mm/data/: E6_constants.npz  E7_constants.npz  E8_constants.npz  F4_constants.npz  G2_constants.npz
equivariant/: README.md  __init__.py  benchmark.py  layers.py  model.py  sparse_kernel.py
equivariant/tests/: test_equivariance.py
examples/: integrators_demo.py  lattice_gauge_demo.py  quantum_sim_demo.py
exceptional/: README.md  __init__.py  benchmarks.py  engine.py  roots.py  structure.py
exceptional/tests/: test_all.py
notebooks/: e8_in_5_minutes.ipynb  equivariant_gnn_demo.ipynb
scripts/: precompute.py
tests/: test_fp64.py  test_integrators.py  test_jax_backend.py  test_lattice.py  test_quantum.py
