[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dhl-mm"
version = "1.0.0"
description = "Dynamic Hodge-Lie Matrix Multiplication — 913x faster E8 Lie algebra products via sparse structure constants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Timothy McGirl" },
]
keywords = ["E8", "Lie algebra", "matrix multiplication", "sparse", "structure constants", "golden ratio", "physics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["numpy>=1.20"]

[project.urls]
Homepage = "https://github.com/grapheneaffiliate/DHL-MM"

[tool.setuptools.packages.find]
include = ["dhl_mm*"]
