[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dhl-mm"
version = "0.1.3"
description = "Up to 913x faster Lie algebra products for all five exceptional algebras with differentiable PyTorch equivariant layers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    { name = "Timothy McGirl" },
]
keywords = ["E8", "Lie algebra", "sparse", "structure constants", "equivariant", "neural network", "PyTorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
torch = ["torch>=2.0"]
full = ["torch>=2.0", "scipy>=1.10"]

[project.urls]
Homepage = "https://github.com/grapheneaffiliate/DHL-MM"

[tool.setuptools.packages.find]
include = ["dhl_mm*", "equivariant*"]

[tool.setuptools.package-data]
"dhl_mm" = ["data/*.npz"]
